--- a/capstone-project/Capstone.Web/Capstone.Web.csproj
+++ b/capstone-project/Capstone.Web/Capstone.Web.csproj
@@ -108,21 +108,73 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\backpack.png" />
+    <Content Include="Content\Images\backpack2.jpg" />
+    <Content Include="Content\Images\geek.png" />
+    <Content Include="Content\Images\logo.png" />
+    <Content Include="Content\Images\parks\cvnp.jpg" />
+    <Content Include="Content\Images\parks\enp.jpg" />
+    <Content Include="Content\Images\parks\gcnp.jpg" />
+    <Content Include="Content\Images\parks\gnp.jpg" />
+    <Content Include="Content\Images\parks\gsmnp.jpg" />
+    <Content Include="Content\Images\parks\gtnp.jpg" />
+    <Content Include="Content\Images\parks\mrnp.jpg" />
+    <Content Include="Content\Images\parks\rmnp.jpg" />
+    <Content Include="Content\Images\parks\ynp.jpg" />
+    <Content Include="Content\Images\parks\ynp2.jpg" />
+    <Content Include="Content\Images\scenery.png" />
+    <Content Include="Content\Images\weather\cloudy.png" />
+    <Content Include="Content\Images\weather\partlyCloudy.png" />
+    <Content Include="Content\Images\weather\rain.png" />
+    <Content Include="Content\Images\weather\snow.png" />
+    <Content Include="Content\Images\weather\sunny.png" />
+    <Content Include="Content\Images\weather\thunderstorms.png" />
+    <Content Include="Content\Style.css" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\bootstrap.min.css.map" />
+    <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Content\bootstrap-theme.min.css.map" />
+    <Content Include="Content\bootstrap-theme.css.map" />
+    <None Include="Scripts\jquery-1.9.1-vsdoc.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\jquery-1.9.1.js" />
+    <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAL\IParkDAL.cs" />
+    <Compile Include="DAL\ISurveyDAL.cs" />
+    <Compile Include="DAL\IWeatherDAL.cs" />
+    <Compile Include="DAL\ParkSQLDAL.cs" />
+    <Compile Include="DAL\SurveySQLDAL.cs" />
+    <Compile Include="DAL\WeatherSQLDAL.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Park.cs" />
+    <Compile Include="Models\Survey_Result.cs" />
+    <Compile Include="Models\Weather.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
+    <Content Include="Scripts\jquery-1.9.1.min.map" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -132,9 +184,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
-    <Folder Include="Views\Home\" />
-    <Folder Include="Views\Shared\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
